--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "rishab-portfolio-app",
   "homepage": "https://rishibhatt.github.io/RishabCV ",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
