--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   
   "name": "rishab-portfolio-app",
-  "homepage": "https://rishibhatt.github.io/RishabCV ",
+  "homepage": "https://rishibhatt.github.io/RishabCV%20 ",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
